--- a/12bool.html
+++ b/12bool.html
@@ -6,6 +6,51 @@
     <title>12bool fluenty</title>
   </head>
   <body>
-
+    <header>
+      <div class="container">
+          <nav class="col-4">
+              <img class="navbar-item" src="https://www.fluentify.com/bundles/fluentifypublic/images/logo.svg?v100" alt="">
+              <span class="navbar-item">contact</span>
+              <span class="navbar-item">about</span>
+              <span class="navbar-item">template</span>
+          </nav>
+          <div class="col-4 col-offset-4">
+            <span class="navbar-item">login</span>
+            <span class="navbar-item">search</span>
+            <span class="navbar-item">ciao</span>
+          </div>
+      </div>
+    </header>
+    <main>
+      <div class="container ciao">
+        <div class="col-6">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+        <div class="col-4 col-offset-2">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <div class="container">
+        <div class="col-3 container-immagini">
+          <img id="img-profile" src="img/img1.svg">
+          <h2>Affiancamento costante del tutor</h2>
+        </div>
+        <div class="col-4 col-offset-1 container-immagini">
+          <img id="img-profile" src="img/img2.svg">
+          <h2>Affiancamento costante del tutor</h2>
+        </div>
+        <div class="col-3 col-offset-1 container-immagini">
+          <img id="img-profile" src="img/img3.svg">
+          <h2>Affiancamento costante del tutor</h2>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="col-2 col-offset-10">
+          fine
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
